<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configuracion"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout

        android:id="@+id/pasarConfig"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="8sp"
            android:layout_marginTop="10sp">

            <Switch
                android:id="@+id/ModoOscuro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ModoOscuro"
                android:textSize="18sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2sp"
                android:layout_marginTop="5sp">
                <ImageView
                    android:id="@+id/Imagenocultar1"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/user"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:id="@+id/textCuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ConfiCuenta"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2sp"
                android:layout_marginTop="5sp"
                >

                <ImageView
                    android:id="@+id/Imagenocultar2"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/question"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:id="@+id/textAyuda"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Ayuda"
                    android:textSize="18sp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2sp"
                android:layout_marginTop="5sp">
                <ImageView
                    android:id="@+id/Imagenocultar3"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/information"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:id="@+id/textAcerca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/AcercadePoliticas"
                    android:textSize="18sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="2sp"
                android:layout_marginTop="5sp">
                <ImageView
                    android:id="@+id/Imagenocultar4"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:src="@drawable/notificacion"
                    android:adjustViewBounds="true"/>
                <TextView
                    android:id="@+id/textNotificacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Notificaciones"
                    android:textSize="18sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/btn_AgregarCuent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AgregarCuenta"
                android:textColor="@color/com_facebook_messenger_blue"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/btn_CerrarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/CerrarSesión"
                android:textColor="@color/com_facebook_messenger_blue"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>





</LinearLayout>