<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilesPropios"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/perfilDonar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="713dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="162dp"
                android:layout_height="150dp"
                android:src="@drawable/grupo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.058" /><![CDATA[

            @+id/button3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_Comunica"
                app:layout_constraintHorizontal_bias="0.613"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.406"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/teal_200"
                android:text="@string/BtnAplicar"
                tools:layout_editor_absoluteX="270dp"
                tools:layout_editor_absoluteY="434dp" />



            ]]>

            <Button
                android:id="@+id/buttonn"
                android:layout_width="107dp"
                android:layout_height="43dp"
                android:background="@color/teal_200"
                android:text="@string/Informacion"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_Comunica"
                app:layout_constraintHorizontal_bias="0.722"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.404"></Button>

            <Button
                android:id="@+id/btn_Comunica"
                android:layout_width="105dp"
                android:layout_height="47dp"
                android:background="@color/teal_200"
                android:text="@string/Experiencia"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.407" />

            <Button
                android:id="@+id/btn_donaciones"
                android:layout_width="110dp"
                android:layout_height="42dp"
                android:background="@color/teal_200"
                android:text="@string/Especialidad"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toEndOf="@+id/btn_Comunica"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.406" />

            <Button
                android:id="@+id/textView7"
                android:layout_width="107dp"
                android:layout_height="31dp"
                android:background="@color/teal_200"
                android:text="@string/Agregar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.314" />

            <TextView
                android:id="@+id/txtmensajeAyuda"
                android:layout_width="354dp"
                android:layout_height="150dp"
                android:text="Felipe y sus tesos es una banda dedicada a la  música de corazón donde su especialidad es la  salsa y la música latina para armar así un gran  parrandón "
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.487"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.584" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</LinearLayout>